--- a/index.html
+++ b/index.html
@@ -2,32 +2,34 @@
 <html lang="en" dir="ltr">
   <head>
     <!-- maybe add a font link -->
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <meta charset="utf-8">
     <title>Tic Tac Toe</title>
   </head>
   <body>
     <section class="side-panel">
-      <img class="user-img" src="" alt="">
+      <!-- <img class="user-img" src="" alt=""> -->
+      <h2>🏃‍</h2>
       <h2 class="player-1-wins">0 Wins</h2>
       <!-- this is where a section grid of the winning games would go -->
     </section>
     <section class="center-section">
-      <h1>Who's turn is it anyways?</h1>
+      <h1>Defeat the Clown!</h1>
       <section class="game-board">
-        <section class="top-left"></section>
-        <section class="top-center"></section>
-        <section class="top-right"></section>
-        <section class="mid-left"></section>
-        <section class="mid-center"></section>
-        <section class="mid-right"></section>
-        <section class="bottom-left"></section>
-        <section class="bottom-center"></section>
-        <section class="bottom-right"></section>
+        <section class="top left top-left">top-left</section>
+        <section class="top center top-center">top-center</section>
+        <section class="top right top-right">top-right</section>
+        <section class="mid left mid-left">mid-left</section>
+        <section class="mid center mid-center">mid-center</section>
+        <section class="mid right mid-right">mid-right</section>
+        <section class="bottom left bottom-left">bottom-left</section>
+        <section class="bottom center bottom-center">bottom-center</section>
+        <section class="bottom right bottom-right">bottor-right</section>
       </section>
     </section>
     <section class="side-panel">
-      <img class="user-img" src="" alt="">
+      <!-- <img class="user-img" src="" alt=""> -->
+      <h2>🤡</h2>
       <h2 class="player-2-wins">0 Wins</h2>
     </section>
   </body>
