added click handler

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <section class="center-section">
       <h1>Defeat the Clown!</h1>
       <section class="game-board">
-        <section class="top left top-left">top-left</section>
-        <section class="top center top-center">top-center</section>
-        <section class="top right top-right">top-right</section>
-        <section class="mid left mid-left">mid-left</section>
-        <section class="mid center mid-center">mid-center</section>
-        <section class="mid right mid-right">mid-right</section>
-        <section class="bottom left bottom-left">bottom-left</section>
-        <section class="bottom center bottom-center">bottom-center</section>
-        <section class="bottom right bottom-right">bottor-right</section>
+        <section class="top left top-left"></section>
+        <section class="top center top-center"></section>
+        <section class="top right top-right"></section>
+        <section class="mid left mid-left"></section>
+        <section class="mid center mid-center"></section>
+        <section class="mid right mid-right"></section>
+        <section class="bottom left bottom-left"></section>
+        <section class="bottom center bottom-center"></section>
+        <section class="bottom right bottom-right"></section>
       </section>
     </section>
     <section class="side-panel">
@@ -32,5 +32,8 @@
       <h2>🤡</h2>
       <h2 class="player-2-wins">0 Wins</h2>
     </section>
+    <script src="player.js"></script>
+    <script src="game.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
