--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <!-- this is where a section grid of the winning games would go -->
     </section>
     <section class="center-section">
-      <h1>Defeat the Clown!</h1>
+      <h1 class="turn">Defeat the Clown!</h1>
       <section class="game-board">
         <section class="top left top-left"></section>
         <section class="top center top-center"></section>
