--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <section class="center-section">
       <h1 class="turn">Defeat the Clown!</h1>
       <section class="game-board">
-        <section class="top left top-left"></section>
-        <section class="top center top-center"></section>
-        <section class="top right top-right"></section>
-        <section class="mid left mid-left"></section>
-        <section class="mid center mid-center"></section>
-        <section class="mid right mid-right"></section>
-        <section class="bottom left bottom-left"></section>
-        <section class="bottom center bottom-center"></section>
-        <section class="bottom right bottom-right"></section>
+        <section id="top-left" class="top left square"></section>
+        <section id="top-center" class="top square"></section>
+        <section id="top-right" class="top right square"></section>
+        <section id="mid-left" class="left square"></section>
+        <section id="mid-center" class="square"></section>
+        <section id="mid-right" class="right square"></section>
+        <section id="bottom-left" class="bottom left square"></section>
+        <section id="bottom-center" class="bottom square"></section>
+        <section id="bottom-right" class="bottom right square"></section>
       </section>
     </section>
     <section class="side-panel">
