--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
   </head>
   <body>
     <section class="side-panel">
-      <!-- <img class="user-img" src="" alt=""> -->
       <h2>🤡‍</h2>
       <h2 class="player-1-wins">0 Wins</h2>
-      <!-- this is where a section grid of the winning games would go -->
+      <section class="player-1-boards"></section>
     </section>
     <section class="center-section">
       <h1 class="turn">Defeat the Clown!</h1>
@@ -28,9 +27,9 @@
       </section>
     </section>
     <section class="side-panel">
-      <!-- <img class="user-img" src="" alt=""> -->
       <h2>🔪</h2>
       <h2 class="player-2-wins">0 Wins</h2>
+      <section class="player-2-boards"></section>
     </section>
     <script src="player.js"></script>
     <script src="game.js"></script>
